# opengl_fps

./: '  .gitignore  CMakeCache.txt  CMakeLists.txt  Doomu  Makefile  README.md  cmake_install.cmake
include/: c_3drender.h  c_camera.h  c_colmanager.h  c_enemyobject.h  c_game.h  c_gameobject.h  c_playerobject.h  c_resmanager.h  c_shader.h  c_sprite.h  c_texture.h
include/glad/: glad.h
shaders/: s_fragment.fs  s_sprite.vs  s_vertex.vs
src/: .c_3drender.cpp.swp  .c_game.cpp.swp  .main.cpp.swp  a.out  c_3drender.cpp  c_camera.cpp  c_colmanager.cpp  c_enemyobject.cpp  c_game.cpp  c_gameobject.cpp  c_playerobject.cpp  c_resmanager.cpp  c_shader.cpp  c_sprite.cpp  c_texture.cpp  glad.c  main.cpp
